fix: center tabs on mobile

--- a/src/stylesheets/index.scss
+++ b/src/stylesheets/index.scss
@@ -584,7 +584,7 @@ code {
 }
 
 .projects-hero {
-  background-image: url('/images/hero-bg.svg');
+  background-image: url("/images/hero-bg.svg");
   background-position: center center;
   background-repeat: no-repeat;
   background-size: 1600px;
@@ -596,7 +596,6 @@ code {
     padding-top: 116px;
     padding-bottom: 116px;
   }
- 
 
   img {
     position: absolute;
@@ -617,6 +616,12 @@ code {
   flex-wrap: wrap;
   justify-content: center;
   margin-top: 24px;
+
+  @media #{$mobile} {
+    flex-direction: column;
+    align-items: center;
+  }
+
   a {
     font-weight: 600;
     font-size: 20px;
@@ -775,10 +780,10 @@ code {
     }
 
     a {
-      color: #1A1A1A;
+      color: #1a1a1a;
       text-decoration-line: underline;
       text-decoration-thickness: 2px;
-      text-decoration-color: #FFE100;
+      text-decoration-color: #ffe100;
       text-underline-offset: 5px;
     }
 
@@ -805,10 +810,10 @@ code {
 
     a {
       font-weight: 600;
-      color: #1A1A1A;
+      color: #1a1a1a;
       text-decoration-line: underline;
       text-decoration-thickness: 2px;
-      text-decoration-color: #FFE100;
+      text-decoration-color: #ffe100;
       text-underline-offset: 3px;
     }
   }
@@ -886,7 +891,7 @@ code {
       display: block;
 
       @media #{$mobile} {
-        max-width: 100%;   
+        max-width: 100%;
       }
     }
   }
@@ -903,7 +908,7 @@ code {
     font-weight: 400;
     font-size: 20px;
     line-height: 1.625;
-    
+
     li {
       margin-bottom: 11px;
       &:last-child {
